# churn-prediction

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/processed/: Customer-Churn-processed.csv
data/raw/: Customer-Churn.csv
docs/: architecture.md  model_card.md  monitoring.md
models/: MLmodel  model.pkl
notebooks/: EDA.ipynb  EDA_v2.ipynb
src/api/: app.py
tests/: test_api.py  test_pipeline.py
